fix vertical alignment of invite/search row

--- a/dashboard/compass/sass/style.sass
+++ b/dashboard/compass/sass/style.sass
@@ -283,8 +283,9 @@ img.plus
   font-size: 13pt
 
 #ninvites
-  float: left
   margin-right: 100px
+  +inline-block
+  vertical-align: top
 
 #invites .searchpeers
   width: 300px
